# jemallocator

./: .appveyor.yml  .gitmodules  .travis.yml  Cargo.toml  Cross.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
benches/: alloc.rs  alloc_excess.rs  calloc.rs  nallocx.rs  realloc.rs  realloc_excess.rs  roundtrip.rs
ci/: dox.sh  examples.sh  run.sh  style.sh
ci/docker/aarch64-unknown-linux-gnu/: Dockerfile
ci/docker/x86_64-unknown-linux-gnu/: Dockerfile
examples/no_std/: Cargo.toml  main.rs
examples/vec/: Cargo.toml  main.rs
implementors/core/alloc/: trait.GlobalAlloc.js
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
jemalloc-ctl/: Cargo.toml  README.md
jemalloc-ctl/src/: arenas.rs  background_threads.rs  config.rs  epoch.rs  error.rs  keys.rs  lib.rs  macros.rs  opt.rs  raw.rs  stats.rs  stats_print.rs  thread.rs  version.rs
jemalloc-sys/: Cargo.toml  README.md  build.rs  readme.md
jemalloc-sys/configure/: VERSION  configure
jemalloc-sys/src/: lib.rs
jemalloc-sys/tests/: malloc_conf_set.rs
jemalloc_sys/: all.html  constant.MALLOCX_ZERO.html  fn.MALLOCX_ALIGN.html  fn.MALLOCX_ARENA.html  fn.MALLOCX_LG_ALIGN.html  fn.MALLOCX_TCACHE.html  fn.MALLOCX_TCACHE_NONE.html  fn.aligned_alloc.html  fn.calloc.html  fn.dallocx.html  fn.free.html  fn.mallctl.html  fn.mallctlbymib.html  fn.mallctlnametomib.html  fn.malloc.html  fn.malloc_stats_print.html  fn.malloc_usable_size.html  fn.mallocx.html  fn.nallocx.html  fn.posix_memalign.html  fn.rallocx.html  fn.realloc.html  fn.sallocx.html  fn.sdallocx.html  fn.xallocx.html  index.html  sidebar-items.js  static.malloc_conf.html  static.malloc_message.html  struct.extent_hooks_s.html  type.extent_alloc_t.html  type.extent_commit_t.html  type.extent_dalloc_t.html  type.extent_decommit_t.html  type.extent_destroy_t.html  type.extent_hooks_t.html  type.extent_merge_t.html  type.extent_purge_t.html  type.extent_split_t.html
jemallocator/: all.html  fn.usable_size.html  index.html  sidebar-items.js  struct.Jemalloc.html
jemallocator-global/: Cargo.toml  README.md
jemallocator-global/src/: lib.rs
libc/: enum.DIR.html  enum.FILE.html  enum.c_void.html  enum.fpos64_t.html  enum.fpos_t.html  enum.timezone.html  struct.Dl_info.html  struct.Elf32_Chdr.html  struct.Elf32_Ehdr.html  struct.Elf32_Phdr.html  struct.Elf32_Shdr.html  struct.Elf32_Sym.html  struct.Elf64_Chdr.html  struct.Elf64_Ehdr.html  struct.Elf64_Phdr.html  struct.Elf64_Shdr.html  struct.Elf64_Sym.html  struct.__exit_status.html  struct.__timeval.html  struct._libc_fpstate.html  struct._libc_fpxreg.html  struct._libc_xmmreg.html  struct.addrinfo.html  struct.af_alg_iv.html  struct.aiocb.html  struct.arpd_request.html  struct.arphdr.html  struct.arpreq.html  struct.arpreq_old.html  struct.cmsghdr.html  struct.cpu_set_t.html  struct.dirent.html  struct.dirent64.html  struct.dl_phdr_info.html  struct.dqblk.html  struct.epoll_event.html  struct.fd_set.html  struct.ff_condition_effect.html  struct.ff_constant_effect.html  struct.ff_effect.html  (+111 more)
src/: lib.rs
src/jemalloc_sys/: lib.rs.html
src/jemallocator/: lib.rs.html
src/libc/: macros.rs.html
src/libc/unix/: mod.rs.html
src/libc/unix/linux_like/: mod.rs.html
src/libc/unix/linux_like/linux/: align.rs.html  mod.rs.html
src/libc/unix/linux_like/linux/gnu/: mod.rs.html
src/libc/unix/linux_like/linux/gnu/b64/x86_64/: mod.rs.html  not_x32.rs.html
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: background_thread_defaults.rs  background_thread_enabled.rs  ffi.rs  grow_in_place.rs  malloctl.rs  shrink_in_place.rs  smoke.rs  smoke_ffi.rs  usable_size.rs
