[package]
name = "jemallocator"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["allocator"]
repository = "https://github.com/alexcrichton/jemallocator"
homepage = "https://github.com/alexcrichton/jemallocator"
documentation = "https://docs.rs/jemallocator"
description = """
A Rust allocator backed by jemalloc
"""

[lib]
test = false
bench = false

[workspace]
members = ["systest"]

[dependencies]
jemalloc-sys = { path = "jemalloc-sys", version = "0.2.0", default-features = false }
libc = "0.2.8"

[features]
alloc_trait = []
default = ["background_threads_runtime_support"]
profiling = ["jemalloc-sys/profiling"]
debug = ["jemalloc-sys/debug"]
stats = ["jemalloc-sys/stats"]
background_threads_runtime_support = ["jemalloc-sys/background_threads_runtime_support"]
background_threads = ["jemalloc-sys/background_threads"]
unprefixed_malloc_on_supported_platforms = ["jemalloc-sys/unprefixed_malloc_on_supported_platforms"]

[package.metadata.docs.rs]
features = [ "alloc_trait" ]
rustdoc-args = [ "--cfg jemallocator_docs" ]
