[package]
name = "jemalloc-ctl"
version = "0.3.3"
authors = [
    "Steven Fackler <sfackler@gmail.com>",
    "Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>"
]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["memory-management", "api-bindings", "development-tools" ]
keywords = ["allocator", "jemalloc"]
repository = "https://github.com/gnzlbg/jemallocator"
homepage = "https://github.com/gnzlbg/jemallocator"
documentation = "https://docs.rs/jemalloc-ctl"
description = """
A safe wrapper over jemalloc's control and introspection APIs
"""

[badges]
appveyor = { repository = "gnzlbg/jemallocator" }
travis-ci = { repository = "gnzlbg/jemallocator" }
codecov = { repository = "gnzlbg/jemallocator" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/jemallocator" }
is-it-maintained-open-issues = { repository = "gnzlbg/jemallocator" }
maintenance = { status = "actively-developed" }

[dependencies]
jemalloc-sys = { path = "../jemalloc-sys" }
libc = { version = "0.2", default-features = false }
paste = { version = "0.1" }

[dev-dependencies]
jemallocator = { path = ".." }

[features]
default = []
use_std = [ "libc/use_std" ]

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg", "jemallocator_docs" ]
