[package]
name = "jemalloc-sys"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
links = "jemalloc"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/jemallocator"
homepage = "https://github.com/alexcrichton/jemallocator"
documentation = "http://alexcrichton.com/jemallocator"
description = """
Rust FFI bindings to jemalloc
"""

[dependencies]
libc = { version = "0.2", features = ["no-std"] }

[build-dependencies]
gcc = "0.3"
