[package]
name = "jemalloc-sys"
version = "0.1.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
links = "jemalloc"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/jemallocator"
homepage = "https://github.com/alexcrichton/jemallocator"
documentation = "https://docs.rs/jemallocator-sys"
description = """
Rust FFI bindings to jemalloc
"""

[lib]
test = false
bench = false

[dependencies]
libc = "0.2.8"

[build-dependencies]
cc = "1.0"

[features]
profiling = []
debug = []
