[package]
name = "jemalloc-sys"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
links = "jemalloc"
license = "MIT/Apache-2.0"
readme = "readme.md"
repository = "https://github.com/alexcrichton/jemallocator"
homepage = "https://github.com/alexcrichton/jemallocator"
documentation = "https://docs.rs/jemallocator-sys"
keywords = ["allocator"]
description = """
Rust FFI bindings to jemalloc
"""

[lib]
test = false
bench = false

[dependencies]
libc = { version = "^0.2.8", default-features = false }

[build-dependencies]
cc = "^1.0.13"
fs_extra = "^1.1"

[features]
default = ["background_threads_runtime_support"]
profiling = []
debug = []
background_threads_runtime_support = []
background_threads = [ "background_threads_runtime_support" ]
stats = []
unprefixed_malloc_on_supported_platforms = []

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg jemallocator_docs" ]
