[package]
name = "jemallocator-global"
# Make sure to update the version in the readme as well:
version = "0.3.2"
authors = ["Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>"]
edition = "2015"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["allocator", "jemalloc"]
categories = ["memory-management", "api-bindings"]
repository = "https://github.com/gnzlbg/jemallocator"
homepage = "https://github.com/gnzlbg/jemallocator"
documentation = "https://docs.rs/jemallocator-global"
description = """
Sets `jemalloc` as the `#[global_allocator]`
"""

 [badges]
appveyor = { repository = "gnzlbg/jemallocator" }
travis-ci = { repository = "gnzlbg/jemallocator" }
codecov = { repository = "gnzlbg/jemallocator" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/jemallocator" }
is-it-maintained-open-issues = { repository = "gnzlbg/jemallocator" }
maintenance = { status = "actively-developed" }

[dependencies]
jemallocator = { path = "..", optional = true }
cfg-if = "0.1"

[features]
default = []
# Unconditionally sets jemalloc as the global allocator:
force_global_jemalloc = [ "jemallocator" ]

# To enable `jemalloc` as the `#[global_allocator]` by default
# for a particular target, white-list the target explicitly here:

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "macos", target_os = "ios", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
jemallocator = { path = "..", optional = false }

# FIXME: https://github.com/gnzlbg/jemallocator/issues/91
# [target.'cfg(target_os = "windows")'.dependencies]
# jemallocator = { path = ".." }

# `jemalloc` is known not to work on - see `jemalloc-sys/build.rs`.
# - rumprun
# - bitrig
# - redox
# - fuchsia
# - emscripten
# - wasm32

