[package]
name = "jemallocator_no_std_example"
version = "0.1.0"
authors = ["Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
jemallocator = { path = "../..", features = ["alloc_trait", "bg_thread"] }

[[bin]]
name = "no_std"
path = "main.rs"

[features]
default = ["alloc_trait", "bg_thread"]
alloc_trait = ["jemallocator/alloc_trait"]
bg_thread = ["jemallocator/bg_thread"]
no_global = []